[gd_scene load_steps=4 format=2]

[ext_resource path="res://Minigame_WerkzeugZuordnen/WerkzeugPerson.gd" type="Script" id=1]
[ext_resource path="res://Minigame_WerkzeugZuordnen/Assets/possible_theme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112, 132 )

[node name="WerkzeugPerson" type="Area2D"]
position = Vector2( 159, 214 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )

[node name="InfoBox" type="Label" parent="."]
visible = false
margin_left = -322.0
margin_top = -140.0
margin_right = -252.0
margin_bottom = -76.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="on_Area_entered"]
[connection signal="area_exited" from="." to="." method="on_Area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_WerkzeugPerson_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_WerkzeugPerson_mouse_exited"]
